socketcluster-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: socketcluster
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: socketcluster
    spec:
      containers:
      - name: sc-dummy
        imagePullPolicy: IfNotPresent
        image: sc-dummy
        # image: socketcluster/socketcluster:v5.1.2
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health-check
            port: 8000
          initialDelaySeconds: 30
          timeoutSeconds: 5
