socketcluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: socketcluster
  labels:
    app: socketcluster
spec:
  clusterIP: None
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: socketcluster
  # type: NodePort
